# finrag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  manual_test.py  pyproject.toml  requirements-notebook.txt
.ipynb_checkpoints/: retrieval_benchmark-checkpoint.ipynb
docs/: PRD.md  design_architecture.md  engineering_log.md  evaluation.md  productionisation_plan.md  requirements_setup.md  streamlit_ui_walkthrough.md  test_suite_summary.md
docs/journal/: delivery_journal.md
outputs/: eval_dev_20250418_231212.jsonl  eval_dev_20250418_232046.jsonl  eval_dev_20250418_233007.jsonl  eval_dev_20250418_233418.jsonl  eval_dev_20250418_233430.jsonl  eval_dev_20250418_235406.jsonl  eval_dev_20250418_235822.jsonl  eval_dev_20250419_000728.jsonl  eval_dev_20250419_000741.jsonl  eval_dev_20250419_001653.jsonl  eval_dev_20250419_001735.jsonl  eval_dev_20250419_001832.jsonl  eval_dev_20250419_001908.jsonl  eval_dev_20250419_001917.jsonl  eval_dev_20250419_001928.jsonl  eval_dev_20250419_002240.jsonl  eval_dev_20250419_002315.jsonl  eval_dev_20250419_002348.jsonl  eval_dev_20250419_002426.jsonl  eval_dev_20250419_002547.jsonl  eval_dev_20250419_002557.jsonl  eval_dev_20250419_003012.jsonl  eval_dev_20250419_003126.jsonl  eval_dev_20250419_003527.jsonl  eval_dev_20250419_003746.jsonl  eval_dev_20250419_003808.jsonl  eval_dev_20250419_004045.jsonl
scripts/: estimate_embedding_cost.py  generate_upsert_questions.py  load_chroma.py  load_chroma_mpnet.py  test-pinecone.py  upsert_questions.jsonl  upsert_to_pinecone.py
src/finrag/: __init__.py  agent.py  calculator.py  chunk_utils.py  cli.py  data_loaders.py  dsl.py  embeddings.py  eval.py  index_embeddings_pinecone.py  (+4 more)
src/finrag.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_agent.py  test_calculator.py  test_chunk_utils.py  test_dsl.py  test_eval.py  test_retriever.py  test_tools.py
